--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "type": "module",
     "scripts": {
-        "test": "vitest run"
+        "test": "vitest run --environment jsdom"
     },
     "name": "leanpawgress",
     "version": "1.0.0",
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/bamobam/LeanPawgress#readme",
     "devDependencies": {
+        "jsdom": "^27.0.0",
         "vitest": "^3.2.4"
     }
 }
