--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "type": "module",
     "scripts": {
         "test": "vitest run --environment jsdom",
-        "console": "node src/console/enhanced-pet-console.js"
+        "console": "node src/console/enhanced-pet-console.js",
+        "start": "node server.js",
+        "dev": "node server.js"
     },
     "name": "leanpawgress",
     "version": "1.0.0",
@@ -19,6 +21,9 @@
         "url": "https://github.com/bamobam/LeanPawgress/issues"
     },
     "homepage": "https://github.com/bamobam/LeanPawgress#readme",
+    "dependencies": {
+        "express": "^4.18.2"
+    },
     "devDependencies": {
         "jsdom": "^27.0.0",
         "vitest": "^3.2.4"
